# gpgpu_examples

./: CMakeLists.txt  README.md  add.c  add.cu
01_introduction/: 01_add.c  01_add.cu  CMakeLists.txt
01_introduction/problem_set_1/: CMakeLists.txt  HW1.cpp  README.md  compare.h  main.cpp  reference_calc.h  student_func.cu
02_communication_patterns/: CMakeLists.txt
02_communication_patterns/problem_set_2/: CMakeLists.txt  HW2.cpp  student_func.cu
03_parallel_primitives/: 01_reduce.cu  03_histogram.cu  CMakeLists.txt
03_parallel_primitives/problem_set_3/: CMakeLists.txt  loadSaveImage.cpp  student_func.cu
04_Unit/: CMakeLists.txt  matrix_multiplication.cu  matrix_transpose.cu
